--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@monaco-editor/react": "^4.4.4",
     "@shopify/app-bridge": "^2.0.22",
     "@shopify/app-bridge-react": "^2.0.24",
     "@shopify/app-bridge-utils": "^2.0.23",
@@ -37,6 +38,8 @@
     "vite": "^2.9.1"
   },
   "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
     "husky": "^7.0.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
