--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.3.0",
         "serve-static": "^1.14.1",
-        "vite": "^2.9.1"
+        "vite": "^2.9.1",
+        "winston": "^3.7.2"
     },
     "devDependencies": {
         "eslint": "^8.14.0",
