--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "express": "^4.17.3",
         "firebase-admin": "^10.1.0",
         "graphql": "^16.3.0",
+        "monaco-editor-auto-typings": "^0.4.0",
+        "path-browserify": "^1.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.3.0",
