--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "private": true,
     "scripts": {
         "build": "npm run build:client",
+        "heroku-postinstall": "npm run build:client",
+        "heroku-postbuild": "echo \"Skipping build\"",
         "build:client": "vite build --outDir dist/client",
         "debug": "node --inspect-brk server/index.js",
         "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch ./server",
