--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "scripts": {
         "build": "npm run build:client",
         "heroku-postinstall": "npm run build:client",
-        "heroku-postbuild": "echo \"Skipping build\"",
         "build:client": "vite build --outDir dist/client",
         "debug": "node --inspect-brk server/index.js",
         "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch ./server",
         "prepare": "husky install",
         "preserve": "npm run build",
+        "heroku-preserve": "echo \"Skipping build\"",
         "serve": "cross-env NODE_ENV=production node server/index.js",
         "start": "npm run serve",
         "test": "vitest --reporter=verbose"
