--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "debug": "node --inspect-brk server/index.js",
         "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch ./server",
         "prepare": "husky install",
-        "preserve": "npm run build",
-        "heroku-preserve": "echo \"Skipping build\"",
+        "local-preserve": "npm run build",
         "serve": "cross-env NODE_ENV=production node server/index.js",
         "start": "npm run serve",
         "test": "vitest --reporter=verbose"
