--- a/web/package.json
+++ b/web/package.json
@@ -1,55 +1,31 @@
 {
-    "name": "workflows-web",
-    "private": true,
-    "scripts": {
-        "build": "npm run build:client",
-        "heroku-postinstall": "npm run build:client",
-        "build:client": "vite build --outDir dist/client",
-        "debug": "node --inspect-brk server/index.js",
-        "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch ./server",
-        "prepare": "husky install",
-        "local-preserve": "npm run build",
-        "serve": "cross-env NODE_ENV=production node server/index.js",
-        "start": "npm run serve",
-        "test": "vitest --reporter=verbose"
-    },
-    "type": "module",
-    "engines": {
-        "node": ">=16.13.0"
-    },
-    "dependencies": {
-        "@apollo/client": "^3.5.10",
-        "@monaco-editor/react": "^4.4.4",
-        "@shopify/app-bridge": "^2.0.22",
-        "@shopify/app-bridge-react": "^2.0.24",
-        "@shopify/app-bridge-utils": "^2.0.23",
-        "@shopify/polaris": "^9.2.2",
-        "@shopify/shopify-api": "^3.0.0",
-        "@vitejs/plugin-react": "1.2.0",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.6",
-        "cross-env": "^7.0.3",
-        "dotenv": "^16.0.0",
-        "eslint": "^8.15.0",
-        "express": "^4.17.3",
-        "firebase-admin": "^10.1.0",
-        "graphql": "^16.3.0",
-        "monaco-editor-auto-typings": "^0.4.0",
-        "path-browserify": "^1.0.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router-dom": "^6.3.0",
-        "serve-static": "^1.14.1",
-        "vite": "^2.9.1",
-        "winston": "^3.7.2"
-    },
-    "devDependencies": {
-        "eslint-plugin-react": "^7.29.4",
-        "husky": "^7.0.4",
-        "nodemon": "^2.0.15",
-        "prettier": "^2.6.2",
-        "pretty-quick": "^3.1.3",
-        "supertest": "^6.2.2",
-        "vitest": "^0.9.2"
-    }
+	"name": "workflows-web",
+	"private": true,
+	"license": "UNLICENSED",
+	"scripts": {
+		"debug": "node --inspect-brk index.js",
+		"dev": "cross-env NODE_ENV=development nodemon index.js --ignore ./frontend",
+		"serve": "cross-env NODE_ENV=production node index.js",
+		"test": "vitest --reporter=verbose --config=./__tests__/vitest.config.js"
+	},
+	"type": "module",
+	"engines": {
+		"node": ">=16.13.0"
+	},
+	"dependencies": {
+		"@shopify/shopify-api": "^3.1.0",
+		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.6",
+		"cross-env": "^7.0.3",
+		"express": "^4.17.3",
+		"serve-static": "^1.14.1"
+	},
+	"devDependencies": {
+		"jsonwebtoken": "^8.5.1",
+		"nodemon": "^2.0.15",
+		"prettier": "^2.6.2",
+		"pretty-quick": "^3.1.3",
+		"supertest": "^6.2.2",
+		"vitest": "^0.9.2"
+	}
 }
