--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-	"name": "workflows",
-	"private": true,
-	"license": "UNLICENSED",
-	"main": "web/index.js",
-	"scripts": {
-		"shopify": "shopify",
-		"build": "shopify app build",
-		"dev": "shopify app dev",
-		"info": "shopify app info",
-		"scaffold": "shopify app scaffold",
-		"deploy": "shopify app deploy"
-	},
-	"dependencies": {
-		"@shopify/app": "^3",
-		"@shopify/cli": "^3"
-	}
+    "name": "workflows",
+    "private": true,
+    "license": "UNLICENSED",
+    "scripts": {
+        "shopify": "shopify",
+        "build": "shopify app build",
+        "dev": "shopify app dev",
+        "info": "shopify app info",
+        "scaffold": "shopify app scaffold",
+        "deploy": "shopify app deploy"
+    },
+    "workspaces": [
+        "web",
+        "web/frontend"
+    ],
+    "dependencies": {
+        "@shopify/app": "^3",
+        "@shopify/cli": "^3"
+    },
+    "devDependencies": {
+        "eslint": "^8.19.0",
+        "eslint-config-prettier": "^8.5.0",
+        "prettier": "^2.7.1"
+    }
 }
