--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -19,12 +19,7 @@
 		"@shopify/polaris": "^9.11.0",
 		"@shopify/shopify-api": "^3.0.0",
 		"@vitejs/plugin-react": "1.2.0",
-		"compression": "^1.7.4",
-		"cookie-parser": "^1.4.6",
-		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.0",
-		"express": "^4.17.3",
-		"firebase-admin": "^10.1.0",
 		"graphql": "^16.3.0",
 		"graphql-request": "^4.2.0",
 		"monaco-editor-auto-typings": "^0.4.0",
@@ -33,19 +28,13 @@
 		"react-dom": "^17.0.2",
 		"react-query": "^3.34.19",
 		"react-router-dom": "^6.3.0",
-		"serve-static": "^1.14.1",
-		"vite": "^2.8.6",
-		"winston": "^3.7.2"
+		"vite": "^2.8.6"
 	},
 	"devDependencies": {
 		"@shopify/react-testing": "^3.3.10",
 		"eslint-plugin-react": "^7.29.4",
 		"history": "^5.3.0",
-		"husky": "^7.0.4",
 		"jsdom": "^19.0.0",
-		"nodemon": "^2.0.15",
-		"pretty-quick": "^3.1.3",
-		"supertest": "^6.2.2",
 		"vi-fetch": "^0.6.1",
 		"vitest": "^0.10.0"
 	}
