--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "deploy": "shopify app deploy"
     },
     "workspaces": [
-        "web",
+        "web/backend",
         "web/frontend"
     ],
     "dependencies": {
@@ -20,6 +20,7 @@
         "@shopify/cli": "^3"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.30.5",
         "eslint": "^8.19.0",
         "eslint-config-prettier": "^8.5.0",
         "prettier": "^2.7.1"
