--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -17,6 +17,7 @@
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cross-env": "^7.0.3",
+        "eslint": "^8.19.0",
         "express": "^4.17.3",
         "firebase-admin": "^11.0.0",
         "serve-static": "^1.14.1",
