--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@ SHOP=example.myshopify.com
 # DB Encryption secret 
 SERVER_SECRET=123
 
-# Ports (optional, can be set by Shopify CLI)
-FRONTEND_PORT=3000
-BACKEND_PORT=8080
-# Port for deployment platforms
+# Development Ports (optional, are set by Shopify CLI)
+# FRONTEND_PORT=3000
+# BACKEND_PORT=8080
+# Main server port for deployment platforms
 # PORT=3000 
 # Host for deployment platforms (is set by Shopify CLI locally) 
 # HOST=https://example-app.com
