--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -17,6 +17,7 @@
         "@shopify/app-bridge-react": "^3.1.0",
         "@shopify/app-bridge-utils": "^3.1.0",
         "@shopify/polaris": "^9.11.0",
+        "@vitejs/plugin-react": "^2.0.0",
         "dotenv": "^16.0.0",
         "graphql": "^16.3.0",
         "graphql-request": "^4.2.0",
@@ -26,14 +27,13 @@
         "react-dom": "^17.0.2",
         "react-query": "^3.34.19",
         "react-router-dom": "^6.3.0",
-        "vite": "^2.8.6"
+        "vite": "^3.0.0"
     },
     "devDependencies": {
         "@shopify/react-testing": "^3.3.10",
         "eslint-plugin-react": "^7.29.4",
         "history": "^5.3.0",
         "jsdom": "^19.0.0",
-        "vi-fetch": "^0.6.1",
-        "vitest": "^0.10.0"
+        "vi-fetch": "^0.6.1"
     }
 }
