Backend code cleanup

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ SHOP=example.myshopify.com
 # DB Encryption secret 
 SERVER_SECRET=123
 
-# Development Ports (optional, are set by Shopify CLI)
+# Development ports (optional, are set by Shopify CLI)
 # FRONTEND_PORT=3000
 # BACKEND_PORT=8080
 # Main server port for deployment platforms
