Frontend code cleanup

--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -1,6 +1,8 @@
 {
     "name": "workflows-frontend",
     "private": true,
+    "license": "MIT",
+    "author": "Filippos Dematis",
     "scripts": {
         "build": "vite build",
         "dev": "vite",
